--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
                         </select>
                     </div>
                 </div>
-                <button type="submit">Apply</button>
+
+                <a class="apply-btn" href="./application.html">Apply</a>
             </form>
         </div>
     </header>
