--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
     <link rel="stylesheet" href="assets/css/main.css" />
     <title>LASGFUND</title>
@@ -56,34 +56,12 @@
                 freedom begins here, with solutions designed to empower you every step of the way. Explore our loan
                 options today and start turning your dreams into reality.
             </p>
-            <form action="/">
-                <div class="input__row">
-                    <div class="input__group status">
-                        <span><i class="ri-map-pin-line"></i></span>
-                        <h5>Status</h5>
-                        <span class="desc">Open</span>
-                    </div>
-                    <div class="input__group">
-                        <span><i class="ri-calendar-2-line"></i></span>
-                        <h5>Deadline</h5>
-                        <span class="desc">Dec, 17, 2024</span>
-                    </div>
-                    <!-- <a class="apply-btn" href="./application.html">Apply</a> -->
-                     <button class="apply-btn">
-                        <a href="./application.html">
-                            Apply
-                        </a>
-                     </button>
-
-                </div>
-            </form>
         </div>
     </header>
 
     <section class="app">
         <div class="app__loan-list">
             <div class="app__loan-cards">
-                <a href="./loan/car-loan.html">
                     <div class="app__loan-card">
                         <h3 class="app__loan-card-title">Car Refurbishment Loan</h3>
                         <p class="app__loan-card-text">
@@ -93,10 +71,28 @@
                             vestibulum erat tincidunt. Fusce feugiat dui a felis laoreet, ut suscipit est iaculis.
                             Suspendisse potenti. Aliquam erat volutpat. Suspendisse potenti.
                         </p>
+                        <form action="/">
+                            <div class="input__row">
+                                <div class="input__group status">
+                                    <span><i class="ri-map-pin-line"></i></span>
+                                    <h5>Status: </h5>
+                                    <span class="desc">Open</span>
+                                </div>
+                                <div class="input__group">
+                                    <span><i class="ri-calendar-2-line"></i></span>
+                                    <h5>Deadline: </h5>
+                                    <span class="desc">Dec, 17, 2024</span>
+                                </div>
+                                 <button class="apply-btn ">
+                                    <a href="./application.html">
+                                        Apply
+                                    </a>
+                                 </button>
+            
+                            </div>
+                        </form>
                     </div>
-                </a>
-                <a href="./loan/housing-loan.html">
-                    <div class="app__loan-card app__loan-card--housing">
+                    <div class="app__loan-card app__loan-card">
                         <h3 class="app__loan-card-title">Housing Loan</h3>
                         <p class="app__loan-card-text">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque consectetur, eros ut
@@ -105,8 +101,27 @@
                             vestibulum erat tincidunt. Fusce feugiat dui a felis laoreet, ut suscipit est iaculis.
                             Suspendisse potenti. Aliquam erat volutpat. Suspendisse potenti.
                         </p>
+                        <form action="/">
+                            <div class="input__row">
+                                <div class="input__group status">
+                                    <span><i class="ri-map-pin-line"></i></span>
+                                    <h5>Status: </h5>
+                                    <span class="desc">Open</span>
+                                </div>
+                                <div class="input__group">
+                                    <span><i class="ri-calendar-2-line"></i></span>
+                                    <h5>Deadline: </h5>
+                                    <span class="desc">Dec, 17, 2024</span>
+                                </div>
+                                 <button class="apply-btn">
+                                    <a href="./application.html">
+                                        Apply
+                                    </a>
+                                 </button>
+            
+                            </div>
+                        </form>
                     </div>
-                </a>
             </div>
         </div>
     </section>
