--- a/application.html
+++ b/application.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>LASGFund Loan Application Form</title>
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/form.css" />
 </head>
@@ -18,14 +18,14 @@
     <div id="msform">
         <!-- Progressbar -->
         <ul id="progressbar">
-            <li class="active" data-step="0">Eligibility</li>
+            <li class="active" data-step="0">Eligibility </li>
             <li data-step="1">Personal Information</li>
             <li data-step="2">Employment Details</li>
             <li data-step="3">Loan Details</li>
             <li data-step="4">Financial Information</li>
             <li data-step="5">Guarantor Information</li>
             <li data-step="6">Document Upload</li>
-            <li data-step="8">Reveiew and Submit Application</li>
+            <li data-step="8">Review / Submit</li>
         </ul>
 
         <!-- Eligibility -->
@@ -438,9 +438,9 @@
                                 disqualification from this loan program."</label>
                         </div>
                     <div class="input-row">
-                        <div class="" style="margin-top: 30px;">
+                        <div class="" style="margin-top: 30px; padding-left: 4px">
                             <label class="fieldlabels">Upload Signature:</label>
-                            <input type="file" name="signature" required />
+                            <input type="file" name="signature" style="width: 90%;" required />
                         </div>
                     </div>
                 </div>
